--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,151 @@
-body {
+body{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+html{
+  background: url("../src/fon.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: 100%;
+  width: 100%;
+}
+h1{
+  font-family: 'Roboto', sans-serif;
+  font-size: 34px;
+  font-weight: 400;
+  margin: 0;
+  line-height: 40px;
+  letter-spacing: 0.25px;
+  color: rgba(0, 0, 0, 0.87);
+}
+p,a,span, input{
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+}
+button{
+  transition: all .5s;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  background: #1976D2;
+  padding: 9px 16px;
+  border: none!important;
+  -webkit-appearance: none;
+  border-radius: 0;
+  cursor: pointer;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.12), 0px 0px 0px rgba(0, 0, 0, 0.14), 0px 0px 0px rgba(0, 0, 0, 0.2);
+}
+button:hover{
+  transform: scale(1.1);
+}
+button:active{
+  transform: scale(.9);
+}
+.loginPanel{
+  max-width: 394px;
+  margin: auto;
+}
+.loginPanel > form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.inputs,
+.helloBlock{
+  background-color: #fff;
+  padding: 24px 24px 0;
+  width: 394px;
+  margin: 48px 0;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+.helloBlock{
+  display: none;
+  transition: all .5s;
+  padding-bottom: 168px;
+}
+.inputs div input{
+  padding: 26px 10px 10px 10px;
+  font-size: 16px;
+}
+.inputs div input{
+  border: none;
+  background: rgba(0, 0, 0, 0.06);
+  border-radius: 4px 4px 0px 0px;
+  border-bottom: 2px solid rgba(0, 0, 0, .42);
+  margin-bottom: 24px;
+  width: -webkit-fill-available;
+  -webkit-appearance: none;
+}
+.inputs div input.empty{
+  border-bottom: 2px solid #FF5252;
+}
+.inputs div input.filled{
+  border-bottom: 2px solid #1976D2;
+}
+.inputs div input::placeholder{
+  color: #000;
+}
+.inputs div input:focus-visible{
+  border-bottom: 2px solid #1976D2;
+  margin-bottom: 24px;
+  width: -webkit-fill-available;
+  -webkit-appearance: none;
+  outline: none;
+}
+.InputBlock{
+  position: relative;
+}
+.inputs .descr,
+.inputs .long{
+  font-family: 'Roboto', sans-serif;
+  color: #FF5252;
+  font-size: 10px;
+  position: absolute;
+  top: 8px;
+  left: 10px;
+}
+.inputs .sucsess{
+  font-family: 'Roboto', sans-serif;
+  color: #1976D2;
+  font-size: 10px;
+  position: absolute;
+  top: 8px;
+  left: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media screen and (max-width:800px) {
+  html {
+    background-size: cover;
+    background-position: center;
+  }
+}
+
+@media screen and (max-width:600px) {
+  h1{
+    font-size: 24px;
+    letter-spacing: 0;
+  }
+  .inputs div input {
+    padding: 17px 10px 2px 10px;
+  }
+  .inputs .descr, .inputs .long {
+    top: 3px;
+  }
+}
+
+@media screen and (max-width:450px) {
+  .inputs, .helloBlock {
+    width: 312px;
+  }
+  .inputs, .helloBlock {
+    margin: 24px 0;
+  }
 }
